@@ -1,4 +1,5 @@
 0.04
+ - Update Module::Install to 1.19 version.
 
 0.03 2015-10-13T23:32:55+02:00
  - Fix test.
